--- a/V/css/main.css
+++ b/V/css/main.css
@@ -1,6 +1,12 @@
-@charset "UTF-8";
 @import url("fonts.css");
-/*╧юфъы■ўхэшх ╪ЁшЇЄют*/
+.main-font-style {
+  font-face: "OpenSansRegular", sans-serif;
+  font-size: "16px";
+  color: #F9FFA9; }
+
+body {
+  background-color: #c7c8bd; }
+
 * {
   font-family: "OpenSansRegular", sans-serif;
   font-size: 14px; }
@@ -30,7 +36,6 @@ div.wrng-placeholder {
   bottom: 30px;
   left: 30px; }
   div.wrng-placeholder div.wrng-box {
-    /* ╤Єшы№ тёяы√р■∙хую юъэр*/
     font-family: "OpenSansRegular", sans-serif;
     font-size: 16px;
     width: 400px;
@@ -44,30 +49,23 @@ div.wrng-placeholder {
     opacity: 0;
     display: none;
     bottom: -30px;
-    cursor: pointer;
-    /* └эшьрЎш  яю тыхэш  юъэр яЁхфєяЁхцфхэш  */
-    /* └эшьрЎш  яю тыхэш  юъэр яЁхфєяЁхцфхэш  */ }
+    cursor: pointer; }
     div.wrng-placeholder div.wrng-box.wrng-error {
-      /*╤ЄшышчрЎш  тёяы√тр■∙хую юъэр яюф ю°шсъє*/
       background-color: rgba(255, 77, 77, 0.5);
       border: 1px solid rgba(255, 77, 77, 0.6); }
     div.wrng-placeholder div.wrng-box img.wrng-ico {
-      /*╚ъюэър т тёяы√тр■∙хь юъэх*/
       display: inline-block;
       float: left;
       position: relative; }
     div.wrng-placeholder div.wrng-box span.wrng-text {
-      /*╥хъёЄ тёяы√тр■∙хую юъэр*/
       margin: 5px 5px 5px 5px;
       word-spacing: 3px;
       word-break: break-all; }
     div.wrng-placeholder div.wrng-box.FadeIn {
-      /* ╟ряєёъ рэшьрЎшш яю тыхэш  */
       display: block;
       -webkit-animation: fadeIn 0.4s linear forwards;
       -moz-animation: fadeIn 0.4s linear forwards;
       -o-animation: fadeIn 0.4s linear forwards;
-      -ms-animation: fadeIn 0.4s linear forwards;
       animation: fadeIn 0.4s linear forwards; }
 @-webkit-keyframes fadeIn {
   0% {
@@ -100,11 +98,9 @@ div.wrng-placeholder {
     opacity: 1;
     transform: translateY(-30px); } }
     div.wrng-placeholder div.wrng-box.FadeOut {
-      /* ╟ряєёъ рэшьрЎшш шёўхчрэш  юъэр яЁхфєяЁхцфхэш  */
       -webkit-animation: fadeOut 1s linear forwards;
       -moz-animation: fadeOut 1s linear forwards;
       -o-animation: fadeOut 1s linear forwards;
-      -ms-animation: fadeOut 1s linear forwards;
       animation: fadeOut 1s linear forwards; }
 @-webkit-keyframes fadeOut {
   100% {
@@ -146,5 +142,13 @@ div.wrng-placeholder {
   0% {
     opacity: 1;
     transform: translateY(-30px); } }
+div#login-overlay-placeholder {
+  top: 0;
+  left: 0;
+  width: 100%; }
+  div#login-overlay-placeholder.fixed {
+    position: fixed; }
+  div#login-overlay-placeholder.top {
+    position: relative; }
 
 /*# sourceMappingURL=main.css.map */
